Fix spacing issue

--- a/_sass/_headings.scss
+++ b/_sass/_headings.scss
@@ -13,12 +13,15 @@ h1,h2,h3 {
 }
 
 h1 {
-  margin-top: 1.5em;
   font-size: 1.5em;
 
   &.page-title {
     margin: 0;
   }
+}
+
+#home h1 {
+  margin-top: 1.5em;
 }
 
 h2 {
